--- a/237dollars-frontend/src/app/shared/components/navbar/navbar.component.scss
+++ b/237dollars-frontend/src/app/shared/components/navbar/navbar.component.scss
@@ -543,10 +543,6 @@
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
-
-  @media (max-width: 991px) {
-    display: none;
-  }
 }
 
 .lang-option {
